Fix datetime input UX and dark mode colors

--- a/style.css
+++ b/style.css
@@ -519,6 +519,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-family: inherit;
     flex: 1;
     min-width: 200px;
+    color-scheme: dark;
 }
 
 #taskDeadline:focus {
